# hadwiger-alpha2

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/reference/: alpha2-program-source.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/corpus/: hadwiger_alpha2_certificates.json
data/manifests/: corpus-v1.manifest.json  fingerprint.json
docs/: COMPUTE.md
docs/proofs/: transfer-lemma.md
scripts/: setup.sh
src/alpha2/: cli.py  (+1 more)
tests/: test_battery_determinism.py  test_battery_seed137_e2e.py  test_cbc_backend.py  test_cbc_status_honesty.py  test_chi_no_estimate.py  test_corpus_r1.py  test_corpus_r2.py  test_corpus_r3.py  test_cpsat_backend.py  test_cpsat_status_honesty.py  test_differential.py  test_differential_panel.py  test_fingerprint.py  test_freeze_path_threading.py  test_gate_criticality.py  test_gate_outcomes.py  test_gate_runner.py  test_gate_seed137_pass.py  test_had2_problem.py  test_had3_backends.py  test_had3_problem.py  test_heuristic_instrumentation.py  test_profile_general.py  test_reproduction_contract.py  test_results_log.py  test_safe_family_screen.py  test_schema_roundtrip.py  test_seed137_regression.py  test_solver_isolation.py  test_solver_paths_dash_O.py  test_solver_result.py  test_status_views.py  test_store_append_only.py  test_symmetry_assume_verify.py  test_tutte_berge.py  test_verifier_dash_O.py  test_verifier_isolation.py  test_verifier_mutants.py  test_verifier_size3_mutants.py
(+194 files in other folders)
